Version 0.3.8:
	New features:
	- Files can be opened at a specific position, by appending line (and
	  column) number(s). This allows jumping to positions indicated by programs
	  processing text files such as compilers.

	Bug fixes:
	- Validate the attribute names used in the config file.

Version 0.3.7:
	Bug fixes:
	- Make the dialogs for stepped actions (save, load, quit) abort when the
	  user closes the dialog by using the escape key. Failing to do so would
	  result in failure to reset the terminal and random crashes.

Version 0.3.6:
	Re-release of version 0.3.5 to fix build problems.

Version 0.3.5:
	New features:
	- Added "toggle line comment" functionality.

	Bug fixes:
	- When the syntax highlighting changes through saving the file under a new
	  name, the screen is now correctly updated.
	- Syntax highlighting is now changed when a file is saved under a new name.
	- Reading in background colors from the configuration file did not work
	  for most colors.
	- Better handling of several signals, ensuring that the terminal won't be
	  left in an unusable state.

Version 0.3.4:
	Re-release of version 0.3.3 to update the configure script.

Version 0.3.3:
	Bug fixes:
	- Warn users about attempting to write a read-only file.
	- Improve warnings about encoding problems when saving.
	- Correctly set the "Comment keyword" style.

Version 0.3.2:
	Bug fixes:
	- Correctly handle errors in conversion when loading files. When the
	  converter failed in unexpected ways Tilde would crash.

Version 0.3.1:
	Bug fixes:
	- Correctly handle non-existent files on load and save. Previous version
	  accidentally reintroduced the behaviour reported in bug 14.

Version 0.3.0:
	New features:
	- Detect instances of Tilde on the same terminal that have been suspended.

	Bug fixes:
	- Use realpath function to determine the name of files, rather than the
	  incorrect method used previously.
	- Don't expand autocompletion to word under the cursor (#15).

Version 0.2.2:
	New features: